--- a/test.html
+++ b/test.html
@@ -3,24 +3,55 @@
 <head>
     <title></title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <script src="jquery.js"></script>
     <link rel="stylesheet" href="xCalendar.css">
 
 </head>
 <body>
 <div class="xCalendar">
-    <div class="calendar-ctn">
-        <div class="calendar-panel">
-            <div class="prev-month calendar-switch-btn"></div>
+
+        <div class="xCalendar-top-panel">
+            <div class="prev-month xCalendar-switch-btn"></div>
             <div class="date-holder">
                 <div class="date-year-wrap">2014年</div>
                 <div class="date-month-wrap">3月</div>
             </div>
-            <div class="next-month calendar-switch-btn"></div>
+            <div class="next-month xCalendar-switch-btn"></div>
         </div>
-        <div id="calendar_wrap">
+        <div class="month-panel">
+            <div class="month-block">一月</div>
+            <div class="month-block">二月</div>
+            <div class="month-block">三月</div>
+            <div class="month-block">四月</div>
+            <div class="month-block">五月</div>
+            <div class="month-block">六月</div>
+            <div class="month-block">七月</div>
+            <div class="month-block">八月</div>
+            <div class="month-block">九月</div>
+            <div class="month-block">十月</div>
+            <div class="month-block">十一月</div>
+            <div class="month-block">十二月</div>
+        </div>
+        <div class="year-panel">
+            <div class="year-block prev-year-panel">...</div>
+            <div class="year-block">2014</div>
+            <div class="year-block">2015</div>
+            <div class="year-block">2016</div>
+            <div class="year-block">2017</div>
+            <div class="year-block">2018</div>
+            <div class="year-block">2019</div>
+            <div class="year-block">2020</div>
+            <div class="year-block">2021</div>
+            <div class="year-block">2022</div>
+            <div class="year-block">2023</div>
+            <div class="year-block next-year-panel">...</div>
+        </div>
+        <div class="xCalendar-table-ctn">
+            <div class="xCalendar_head_wrap"></div>
+            <div class="xCalendar_wrap">
+        </div>
+        </div>
 
-        </div>
-    </div>
 </div>
 <script type="text/javascript" src="xCalendar.js"></script>
 <script type="text/javascript">
